--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="widget_text">кекст выджета</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="weather_api_key">20d30fe7ef4e84f9496261448a0f3f63</string>
 </resources>
